test/modules/standard/FileSystem/lydia/sameFile/dir_nonexistent.good
dir_nonexistent.chpl:3: error: No such file or directory in sameFile(../, foo/)
